# suidchk

./: Cargo.toml  LICENSE  README.md  justfile  suidchk
src/: main.rs
