[package]
name = "suidchk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
jwalk = "0.8.1"
colored = "2.1.0"
rayon = "1.10.0"
walkdir = "2.5.0"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"